--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,10 @@
 title: anadh
 email: andrewadhikari2016@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my blog site. 
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://t-rhex.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: it-budd
+twitter_username: itbud
 github_username:  t-rhex
 
 # Build settings
